--- a/BattleInfoPlugin/Views/Fleet.xaml
+++ b/BattleInfoPlugin/Views/Fleet.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:kcvc="http://schemes.grabacr.net/winfx/2015/kancolleviewer/controls"
              xmlns:converters="clr-namespace:Grabacr07.KanColleViewer.Converters;assembly=KanColleViewer.Controls"
              xmlns:controls="clr-namespace:Grabacr07.KanColleViewer.Controls;assembly=KanColleViewer.Controls"
              xmlns:models="clr-namespace:BattleInfoPlugin.Models"
@@ -92,6 +93,8 @@
                                 <ColumnDefinition Width="Auto"
                                                   SharedSizeGroup="Name" />
                                 <ColumnDefinition Width="Auto"
+                                                  SharedSizeGroup="DamageControl" />
+                                <ColumnDefinition Width="Auto"
                                                   SharedSizeGroup="HP" />
                             </Grid.ColumnDefinitions>
 
@@ -105,8 +108,39 @@
                                           FontSize="11" />
                             </TextBlock>
 
+                            <kcvc:SlotItemIcon Grid.Column="1"
+                                               Margin="0,-3,0,0"
+                                               Width="16"
+                                               VerticalAlignment="Top"
+                                               Type ="DamageControl">
+                                <kcvc:SlotItemIcon.Style>
+                                    <Style TargetType="{x:Type kcvc:SlotItemIcon}">
+                                        <Setter Property="Visibility"
+                                                Value="Collapsed" />
+                                        <Style.Triggers>
+                                            <MultiDataTrigger>
+                                                <MultiDataTrigger.Conditions>
+                                                    <Condition Binding="{Binding Situation, Converter={StaticResource HasFlagConverter}, ConverterParameter=DamageControlled}"
+                                                           Value="True"/>
+                                                </MultiDataTrigger.Conditions>
+                                                <Setter Property="Visibility"
+                                                        Value="Visible" />
+                                            </MultiDataTrigger>
+                                            <MultiDataTrigger>
+                                                <MultiDataTrigger.Conditions>
+                                                    <Condition Binding="{Binding Situation, Converter={StaticResource HasFlagConverter}, ConverterParameter=DamageControlled}"
+                                                           Value="False"/>
+                                                </MultiDataTrigger.Conditions>
+                                                <Setter Property="Visibility"
+                                                        Value="Collapsed" />
+                                            </MultiDataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </kcvc:SlotItemIcon.Style>
+                            </kcvc:SlotItemIcon>
+
                             <Grid x:Name="HPIndicator"
-                                      Grid.Column="1"
+                                      Grid.Column="2"
                                       Margin="5,1,5,0">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
@@ -116,31 +150,33 @@
                                 <Grid Grid.Row="0">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto" />
-                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition />
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Text="HP:"
-                                               VerticalAlignment="Bottom"
                                                Style="{DynamicResource DefaultTextStyleKey}"
-                                               Margin="0,2,0,0"
+                                               VerticalAlignment="Bottom"
+                                               Margin="0,1"
                                                Grid.Column="0"/>
 
                                     <TextBlock HorizontalAlignment="Right"
+                                               VerticalAlignment="Bottom"
                                                Margin="0,3,0,0"
                                                Style="{DynamicResource DefaultTextStyleKey}"
                                                Grid.Column="1">
                                         <Run Text="{Binding HP.Current, Mode=OneWay}"
-											 Style="{DynamicResource EmphaticTextElementStyleKey}" /><Run Text="/" /><Run Text="{Binding HP.Maximum, Mode=OneWay}" />
+                                             Style="{DynamicResource EmphaticTextElementStyleKey}" /><Run Text="/" /><Run Text="{Binding HP.Maximum, Mode=OneWay}" />
                                     </TextBlock>
                                 </Grid>
 
                                 <controls:ColorIndicator Grid.Row="1"
                                                          Height="6"
+                                                         MinWidth="65"
                                                          LimitedValue="{Binding HP, Mode=OneWay}"
                                                          Margin="0,2,0,0" />
                             </Grid>
 
                             <Grid x:Name="EvacuationIndicator"
-                                  Grid.Column="1"
+                                  Grid.Column="2"
                                   Visibility="Collapsed"
                                   Margin="3,2,3,0">
                                 <Border Background="{DynamicResource FleetRepairingBrushKey}"
@@ -151,7 +187,7 @@
                             </Grid>
 
                             <Grid x:Name="TowIndicator"
-                                  Grid.Column="1"
+                                  Grid.Column="2"
                                   Visibility="Collapsed"
                                   Margin="3,2,3,0">
                                 <Border Background="{DynamicResource FleetRepairingBrushKey}"
