--- a/BattleInfoPlugin/SampleData/BattleViewModelSampleData.xaml
+++ b/BattleInfoPlugin/SampleData/BattleViewModelSampleData.xaml
@@ -5,7 +5,7 @@
                             BattleSituation="T字有利"
                             FriendAirSupremacy="制空権確保"
                             BattleName="連合艦隊 - 水上部隊 - 昼戦"
-                            BattleResult="完全勝利S"
+                            BattleResult="戦術的勝利B"
                             DropShipName="ほっぽ">
 
     <viewModels:BattleViewModel.AirCombatResults>
@@ -59,7 +59,7 @@
                                 <wrapper:LimitedValue Current="71" Maximum="85" Minimum="0" />
                             </models:MembersShipData.HP>
                         </models:MembersShipData>
-                        <models:MembersShipData MaxHP="40" NowHP="62" Name="駆逐ロ級後期型" Situation="HeavilyDamaged"
+                        <models:MembersShipData MaxHP="40" NowHP="-999" Name="駆逐ロ級後期型" Situation="HeavilyDamaged"
                                                 TypeName="きもい" AdditionalName="flagship">
                             <models:MembersShipData.HP>
                                 <wrapper:LimitedValue Current="-999" Maximum="999" Minimum="0" />
