--- a/BattleInfoPlugin/Views/BattleWindow.xaml
+++ b/BattleInfoPlugin/Views/BattleWindow.xaml
@@ -62,6 +62,8 @@
             <TextBlock Text="{Binding Title}"
                        Style="{DynamicResource CaptionTextStyleKey}"
                        Margin="2,0,8,0" />
+            
+            <views:NextPointInfoView DataContext="{Binding Battle.NextPointInfo}"/>
         </DockPanel>
 
         <ScrollViewer Grid.Row="1"
