战斗败北突出显示

--- a/BattleInfoPlugin/SampleData/BattleViewModelSampleData.xaml
+++ b/BattleInfoPlugin/SampleData/BattleViewModelSampleData.xaml
@@ -5,7 +5,7 @@
                             BattleSituation="T字有利"
                             FriendAirSupremacy="制空権確保"
                             BattleName="連合艦隊 - 水上部隊 - 昼戦"
-                            BattleResult="戦術的勝利B"
+                            BattleResult="戦術的敗北C"
                             DropShipName="ほっぽ">
 
     <viewModels:BattleViewModel.AirCombatResults>
